# Torch

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  compile.bat
.github/workflows/: build.yml  release.yml
assets/models/cube/: cube.glb
core/: CMakeLists.txt
core/events/: Keyboard.cpp
core/glcore/: Shader.cpp
core/graphics/: TorchGraphicsContext.cpp  TorchVulkanContext.cpp  TorchVulkanContext.h
core/platform/: TorchWindow.cpp
core/renderer/: Vertex.h
core/vkcore/: VulkanCommandBuffer.cpp  VulkanCommandBuffer.h  VulkanCommandPool.cpp  VulkanCommandPool.h  VulkanFramebuffer.cpp  VulkanFramebuffer.h  VulkanGraphicsPipeline.cpp  VulkanGraphicsPipeline.h  VulkanImageView.cpp  VulkanImageView.h  VulkanInstance.cpp  VulkanInstance.h  VulkanLogicDevice.cpp  VulkanLogicDevice.h  VulkanPhysicalDevice.cpp  VulkanPhysicalDevice.h  VulkanRenderPass.cpp  VulkanRenderPass.h  VulkanShader.cpp  VulkanShader.h  VulkanSurface.cpp  VulkanSurface.h  VulkanSwapChain.cpp  VulkanSwapChain.h  VulkanSyncObjects.cpp  VulkanSyncObjects.h  VulkanUtils.cpp  VulkanUtils.h
editor/: CMakeLists.txt  Editor.cpp  Editor.h  EntityPropertiesPanel.cpp
engine/: CMakeLists.txt  Engine.cpp
pch/: pch.h
sandbox/: CMakeLists.txt
scripts/: windows_build_debug.bat  windows_build_release.bat
utils/: CMakeLists.txt  FileUtils.cpp  FileUtils.h
